[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/icon_canvas_size.png" type="Texture" id=1]
[ext_resource path="res://DraggablePopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://SettingPopup.gd" type="Script" id=3]
[ext_resource path="res://CanvasSizePopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/icon_new.png" type="Texture" id=5]
[ext_resource path="res://NewPopup.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/icon_open.png" type="Texture" id=7]
[ext_resource path="res://OpenButton.gd" type="Script" id=8]
[ext_resource path="res://SaveButton.gd" type="Script" id=9]
[ext_resource path="res://Assets/icon_save.png" type="Texture" id=10]
[ext_resource path="res://OpenFileDialog.tscn" type="PackedScene" id=11]
[ext_resource path="res://SaveFileDialog.tscn" type="PackedScene" id=12]
[ext_resource path="res://Settings/LanguagePopup.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/icon_language_48.png" type="Texture" id=14]

[node name="SettingPopup" type="Control"]
margin_right = 22.0
margin_bottom = 25.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraggablePopup" parent="." instance=ExtResource( 2 )]
visible = true
margin_left = -1.0
margin_right = 308.0
margin_bottom = 376.0

[node name="GridContainer" type="GridContainer" parent="DraggablePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_right = 130.0
margin_bottom = 50.0
rect_min_size = Vector2( 130, 50 )
text = "New"
icon = ExtResource( 5 )
expand_icon = true

[node name="NewPopup" parent="DraggablePopup/GridContainer/NewButton" instance=ExtResource( 6 )]
margin_left = -290.718
margin_top = -114.491
margin_right = -241.718
margin_bottom = -76.4911

[node name="OpenButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_left = 134.0
margin_right = 264.0
margin_bottom = 50.0
rect_min_size = Vector2( 130, 50 )
text = "Open"
icon = ExtResource( 7 )
expand_icon = true
script = ExtResource( 8 )

[node name="OpenFileDialog" parent="DraggablePopup/GridContainer/OpenButton" instance=ExtResource( 11 )]
current_dir = "/MyProjects/Godot/ExpertPixelEditor"
current_path = "/MyProjects/Godot/ExpertPixelEditor/"

[node name="SaveButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_top = 54.0
margin_right = 130.0
margin_bottom = 104.0
rect_min_size = Vector2( 130, 50 )
text = "Save"
icon = ExtResource( 10 )
expand_icon = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileDialog" parent="DraggablePopup/GridContainer/SaveButton" instance=ExtResource( 12 )]
current_dir = "/MyProjects/Godot/ExpertPixelEditor"
current_path = "/MyProjects/Godot/ExpertPixelEditor/"

[node name="CanvasSizeButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_left = 134.0
margin_top = 54.0
margin_right = 264.0
margin_bottom = 104.0
rect_min_size = Vector2( 130, 50 )
text = "Canvas Size"
icon = ExtResource( 1 )
expand_icon = true

[node name="CanvasSizePopup" parent="DraggablePopup/GridContainer/CanvasSizeButton" instance=ExtResource( 4 )]
margin_left = -335.599
margin_top = 49.3211
margin_right = -316.599
margin_bottom = 65.3211

[node name="LanguageButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_top = 108.0
margin_right = 130.0
margin_bottom = 158.0
rect_min_size = Vector2( 130, 50 )
text = "Language"
icon = ExtResource( 14 )
expand_icon = true

[node name="LanguagePopup" parent="DraggablePopup/GridContainer/LanguageButton" instance=ExtResource( 13 )]
margin_left = 334.329
margin_top = 10.7028
margin_right = 334.329
margin_bottom = 10.7028
[connection signal="pressed" from="DraggablePopup/GridContainer/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/OpenButton" to="DraggablePopup/GridContainer/OpenButton" method="_on_OpenButton_pressed"]
[connection signal="file_selected" from="DraggablePopup/GridContainer/OpenButton/OpenFileDialog" to="DraggablePopup/GridContainer/OpenButton" method="_on_OpenFileDialog_file_selected"]
[connection signal="pressed" from="DraggablePopup/GridContainer/SaveButton" to="DraggablePopup/GridContainer/SaveButton" method="_on_SaveButton_pressed"]
[connection signal="file_selected" from="DraggablePopup/GridContainer/SaveButton/SaveFileDialog" to="DraggablePopup/GridContainer/SaveButton" method="_on_SaveFileDialog_file_selected"]
[connection signal="pressed" from="DraggablePopup/GridContainer/CanvasSizeButton" to="." method="_on_CanvasSizeButton_pressed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/LanguageButton" to="." method="_on_LanguageButton_pressed"]
